# lectures

./: .gitignore
lecture02-scheme/: examples.rkt  figures.rkt  tree.rkt
lecture04-streams/: examples.rkt
lecture09-haskell/: Examples.hs  stack.yaml
lecture09-haskell/.devcontainer/: Dockerfile
lecture10-algebraic/: Examples.hs  examples.cabal
lecture11-polymorphism/: Examples.hs
lecture12-programs-as-data/: Examples.hs  deriv.rkt
lecture13-lambda/: church.rkt
lecture15-testing/: Fib.hs  Insert.hs  Lookup.hs  Quicksort.hs  Spec.hs  testing.cabal
lecture15-testing/.devcontainer/: devcontainer.json
lecture16-monads/: Examples.hs  examples.cabal
lecture16-monads/.devcontainer/: devcontainer.json
lecture17-semantics/: While.hs
lecture18-parsing/: Exp.hs  Parsing.hs  parser.cabal
