name:          examples
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base       >= 4 && < 5,
    hspec      >= 2.10 && < 2.11,
    random     >= 1.2  && < 1.3,
    QuickCheck >= 2.14 && < 2.15

  exposed-modules:
    Examples

  default-language: Haskell2010

  ghc-options: -Wall
